feat(ci): take3 of slack notifier

--- a/commands/slack-on-failure/action.yml
+++ b/commands/slack-on-failure/action.yml
@@ -15,5 +15,5 @@ runs:
     - name: Slack notify failure
       shell: bash
       run: |
-        #[[ "${{ inputs.branch }}" != "*" && "${{ inputs.branch }}" != "${GITHUB_REF##*/}"  ]] && echo "Skipping notification for this branch" && exit 0
+        [[ "${{ inputs.branch }}" != "*" && "${{ inputs.branch }}" != "${GITHUB_REF##*/}"  ]] && echo "Skipping notification for this branch" && exit 0
         curl -X POST -H "Content-Type: application/json" -d "{\"channel\": \"${{ inputs.channel }}\", \"text\": \"\`${{github.repository}}/${GITHUB_REF##*/}\` <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|failed>\" }" ${{inputs.webhook-url }}
