feat(ci): git-push-if-needed, add note on pushing to protected branches

--- a/commands/git-push-if-needed/action.yml
+++ b/commands/git-push-if-needed/action.yml
@@ -1,4 +1,5 @@
 name: 'Git push (if needed)'
+description: 'Note: if run on protected branch, code must be checked out with admin PAT for this push to work'
 runs:
   using: "composite"
   steps:
