--- a/commands/setup-python/action.yml
+++ b/commands/setup-python/action.yml
@@ -1,17 +1,17 @@
-name: 'Set up python 3.8 and install deps/fetch cache '
+name: 'Set up python 3.10 and install deps/fetch cache '
 
 runs:
   using: "composite"
   steps:
-    - name: Set up Python 3.8
+    - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: '3.10'
     - uses: actions/cache@v3
       id: cache
       with:
-        path: ${{ env.pythonLocation}}/lib/python3.8/site-packages/*
-        key: v2-${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        path: ${{ env.pythonLocation}}/lib/python3.10/site-packages/*
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
         restore-keys: |
           v2-${{ runner.os }}-pip-
           v2-${{ runner.os }}-
