--- a/commands/setup-python/action.yml
+++ b/commands/setup-python/action.yml
@@ -1,12 +1,22 @@
-name: 'Set up Nodejs 16.10 and install deps/fetch cache '
+name: 'Set up python 3.10 and install deps/fetch cache '
 
 runs:
   using: "composite"
   steps:
-    - uses: actions/setup-node@v3
-      with: { node-version: "16.10", cache: 'yarn' }
-      env: { NODE_AUTH_TOKEN: "${{ secrets.NPM_TOKEN }}" } }
-    - name: Yarn install deps from lockfile
-      run: yarn --frozen-lockfile
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+    - uses: actions/cache@v3
+      id: cache
+      with:
+        path: ${{ env.pythonLocation}}/lib/python3.10/site-packages/*
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          v2-${{ runner.os }}-pip-
+          v2-${{ runner.os }}-
+    - name: Install pip dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
+      shell: bash
+      run: |
+        pip3 install --upgrade -r requirements.txt
