--- a/commands/setup-node/action.yml
+++ b/commands/setup-node/action.yml
@@ -6,4 +6,5 @@ runs:
     - uses: actions/setup-node@v3
       with: { node-version: "16.10", cache: 'yarn' }
     - name: Yarn install deps from lockfile
+      shell: bash
       run: yarn --frozen-lockfile
