--- a/commands/setup-node/action.yml
+++ b/commands/setup-node/action.yml
@@ -4,7 +4,11 @@ runs:
   using: "composite"
   steps:
     - uses: actions/setup-node@v3
-      with: { node-version: "16", cache: 'yarn' }
+      with: { node-version: "16" }
+    - uses: actions/cache@v3
+      with:
+        path: 'node_modules'
+        key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
     - name: Yarn install deps from lockfile
       shell: bash
       run: yarn --frozen-lockfile
