refactor(ci): back to env var approach

--- a/commands/git-msg/action.yml
+++ b/commands/git-msg/action.yml
@@ -10,3 +10,5 @@ runs:
     - run: echo "::set-output name=msg::`git log -1 --pretty=%B | head -n 1`"
       id: msg
       shell: bash
+    - run: echo "GIT_MSG=`git log -1 --pretty=%B | head -n 1`" >> $GITHUB_ENV
+      shell: bash
