fix(ci): fix breakage in python 3.10.15 installer

--- a/commands/setup-python/action.yml
+++ b/commands/setup-python/action.yml
@@ -7,6 +7,8 @@ runs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+      env:
+        AGENT_TOOLSDIRECTORY: "/home/docker/actions-runner/_work/_tool/py-hostedtoolcache"
     - uses: actions/cache@v3
       id: cache
       with:
