--- a/commands/setup-node/action.yml
+++ b/commands/setup-node/action.yml
@@ -1,14 +1,10 @@
-name: 'Set up Nodejs 16.10 and install deps/fetch cache '
+name: 'Set up Node.js and install deps/fetch cache'
 
 runs:
   using: "composite"
   steps:
     - uses: actions/setup-node@v3
-      with: { node-version: "16" }
-    - uses: actions/cache@v3
-      with:
-        path: 'node_modules'
-        key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+      with: { node-version: '18', cache: 'yarn' }
     - name: Yarn install deps from lockfile
       shell: bash
       run: yarn --frozen-lockfile
