--- a/commands/setup-python/action.yml
+++ b/commands/setup-python/action.yml
@@ -1,4 +1,4 @@
-name: 'Set up python 3.10 and install deps/fetch cache '
+name: 'Set up python 3.10 and install deps/fetch cache using Poetry'
 
 runs:
   using: "composite"
@@ -6,20 +6,20 @@ runs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10.4' # 3.10.5 changed default AGENT_TOOLSDIRECTORY and broke install
-      # Roll out 3.10.5 more carefully
-#      env:
-#        AGENT_TOOLSDIRECTORY: "/home/docker/actions-runner/_work/_tool/py-hostedtoolcache"
-    - uses: actions/cache@v3
+        python-version: '3.10.4'
+    - name: Cache poetry virtualenv
+      uses: actions/cache@v2
       id: cache
       with:
-        path: ${{ env.pythonLocation}}/lib/python3.10/site-packages/*
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          v2-${{ runner.os }}-pip-
-          v2-${{ runner.os }}-
-    - name: Install pip dependencies
+        path: ${{ env.pythonLocation }}
+        key: ${{ runner.os }}-poetry-${{ env.pythonLocation }}-${{ hashFiles('poetry.lock') }}
+    - name: Install poetry
       if: steps.cache.outputs.cache-hit != 'true'
-      shell: bash
       run: |
-        pip3 install --upgrade -r requirements.txt
+        python -m pip install --upgrade pip
+        python -m pip install poetry
+    - name: Set poetry config
+      run: python -m poetry config virtualenvs.create false
+    - name: Install dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: python -m poetry install
