--- a/commands/setup-python/action.yml
+++ b/commands/setup-python/action.yml
@@ -18,8 +18,10 @@ runs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install poetry
+      shell: bash
     - name: Set poetry config
       run: python -m poetry config virtualenvs.create false
     - name: Install dependencies
       if: steps.cache.outputs.cache-hit != 'true'
       run: python -m poetry install
+      shell: bash
