--- a/commands/setup-python/action.yml
+++ b/commands/setup-python/action.yml
@@ -7,22 +7,22 @@ runs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10.4'
-    - name: Cache poetry virtualenv
-      uses: actions/cache@v2
-      id: cache
-      with:
-        path: ${{ env.pythonLocation }}
-        key: ${{ runner.os }}-poetry-${{ env.pythonLocation }}-${{ hashFiles('poetry.lock') }}
+    # - name: Cache poetry virtualenv
+    #   uses: actions/cache@v2
+    #   id: cache
+    #   with:
+    #     path: ${{ env.pythonLocation }}
+    #     key: ${{ runner.os }}-poetry-${{ env.pythonLocation }}-${{ hashFiles('poetry.lock') }}
     - name: Install poetry
-      if: steps.cache.outputs.cache-hit != 'true'
+    #  if: steps.cache.outputs.cache-hit != 'true'
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install poetry
+        pip install --upgrade pip
+        pip install poetry
       shell: bash
-    - name: Set poetry config
-      run: python -m poetry config virtualenvs.create false
+    # - name: Set poetry config
+    #   run: python -m poetry config virtualenvs.create false
       shell: bash
     - name: Install dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: python -m poetry install
+    #  if: steps.cache.outputs.cache-hit != 'true'
+      run: poetry install
       shell: bash
