chore(ci): remove deprecated syntax

--- a/commands/git-msg/action.yml
+++ b/commands/git-msg/action.yml
@@ -7,7 +7,7 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - run: echo "::set-output name=msg::`git log -1 --pretty=%B | head -n 1`"
+    - run: echo "msg=`git log -1 --pretty=%B | head -n 1`" >> $GITHUB_OUTPUT
       id: msg
       shell: bash
     - run: echo "GIT_MSG=`git log -1 --pretty=%B | head -n 1`" >> $GITHUB_ENV
